2019-02-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-dtree.el (w3m-dtree-create-sub): BUGFIX: don't abort if a subdir
	denies permission to read.

2019-02-03  Boruch Baum  <boruch_baum@gmx.com>

	* Refactor entire codebase for utf-8. There were a zillion changes in
	this commit, spread over very many files. See the git commit extended
	message for details.

2019-02-03  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-cookie.el (w3m-cookie-shutdown): avoid duplicate get-buffer call.

	* w3m-form.el (w3m-form-textarea-file-cleanup)
	(w3m-form-textarea-files-remove): use pop instead of (cdr
	(car x))

	* w3m-session.el (w3m-session-select-sessions): Add docstring

	* w3m.el (w3m-cleanup-temp-files): Add cache and tmp files to list.

2019-02-03  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-xkcd, w3m-filter-github-repo-main-page): New filters.
	(w3m-filter-configuration): Add the new filters.

2019-01-31  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-lynx-like-map, w3m-info-like-map): Keybindings for the
	new feature.

	* w3m-hist.el (w3m-history-scrub, w3m-scrub-command-list): New feature
	to delete browser resources for privacy, security, space.

2019-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el (report-emacs-w3m-bug-system-informations):
	Add emacs-w3m-git-revision.

2019-01-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-git-revision): Moved to w3m-load.el.

	* w3mhack.el (w3mhack-insert-git-revision): New function to set the
	value of `emacs-w3m-git-revision'.
	(w3mhack-generate-load-file): Call the above and check the timestamp of
	w3mhack.el to decide necessity of updating w3m-load.el.

2018-12-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-git-revision): New constant.
	(emacs-w3m-version): Separated from revision string.

2018-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-decode-encoded-contents): Use the conventional way if