@@ -1,3 +1,8 @@
+2019-06-25  Boruch Baum  <boruch_baum@gmx.com>
+
+	* w3m-hist.el (w3m-history-scrub): Make the output buffer a w3m-mode buffer.
+	Colorize warning message.
+
 2019-02-12  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m-dtree.el (w3m-dtree-create-sub): BUGFIX: don't abort if a subdir
